--- a/src/app/pages/main/index.component.html
+++ b/src/app/pages/main/index.component.html
@@ -1,5 +1,5 @@
 <div class="clear"></div>
-<div class="container" style="background: #fff">
+<div class="container effect8" style="background: #fff">
     <div class="slide" style="padding: 10px 0; text-align: center">
         <carousel [interval]="2000">
             <slide>
@@ -19,15 +19,16 @@
 
     <div class="row" style="padding-top: 20px">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <h1 *ngIf="activities.length<=0" style="text-align: center; font-weight: bold; font-size: 38pt">
-                Chưa hoạt động nào được đăng tải
-            </h1>
-            <h2 style="border-bottom: 2px solid #0e76bc; margin-left: 10px">
-                <a class="title-category">
- Hoạt động
-            </a>
 
+            <h2 *ngIf="activities.length<=0" style="padding-bottom: 1em; text-align: center; font-weight: bold; font-size: 24pt; color: #999">
+                <i class="fa fa-3x fa-newspaper-o" aria-hidden="true"></i>
+                <br> Chưa hoạt động nào được đăng tải
             </h2>
+            <h3 *ngIf="activities.length>0" style="border-bottom: 2px solid #0e76bc; margin-left: 10px">
+                <a class="title-category">
+                Hoạt động
+                 </a>
+            </h3>
             <div *ngFor="let activity of activities | paginate: { id: 'server', itemsPerPage:
                 paging.perPage, currentPage: paging.currentPage+1, totalItems: paging.total }">
                 <main-activity [data]="activity"></main-activity>
@@ -35,7 +36,7 @@
 
         </div>
     </div>
-    <div class="row" style="padding-top: 20px ">
+    <div class="row" *ngIf="activities.length>0" style="padding-top: 5em;">
         <div class="col-lg-12 col-md-12 ">
             <div style="text-align: center ">
                 <div class="spinner" [ngClass]="{ 'hidden': !loading } "></div>
