--- a/src/assets/css/core.css
+++ b/src/assets/css/core.css
@@ -387,7 +387,7 @@ a:focus {
   background-clip: padding-box;
 }
 .icon-list-demo .col-md-4:hover {
-  background-color: #7e57c2;
+  background-color: #0e76bc;
 }
 .icon-list-demo .col-md-4:hover i {
   -o-transform: scale(2);
@@ -496,10 +496,10 @@ a:focus {
 }
 /* Background colors */
 .bg-custom {
-  background-color: #7e57c2 !important;
+  background-color: #0e76bc !important;
 }
 .bg-primary {
-  background-color: #5d9cec !important;
+  background-color: #0e76bc !important;
 }
 .bg-success {
   background-color: #81c868 !important;
@@ -533,7 +533,7 @@ a:focus {
 }
 /* Text colors */
 .text-custom {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 .text-white {
   color: #ffffff;
@@ -545,7 +545,7 @@ a:focus {
   color: #98a6ad;
 }
 .text-primary {
-  color: #5d9cec;
+  color: #0e76bc;
 }
 .text-warning {
   color: #ffbd4a;
@@ -633,10 +633,10 @@ textarea.form-control {
   padding: .3em .6em .3em;
 }
 .label-default {
-  background-color: #7e57c2;
+  background-color: #0e76bc;
 }
 .label-primary {
-  background-color: #5d9cec;
+  background-color: #0e76bc;
 }
 .label-success {
   background-color: #81c868;
@@ -666,7 +666,7 @@ textarea.form-control {
   padding: 3px 5px;
   font-size: 12px;
   margin-top: 1px;
-  background-color: #7e57c2;
+  background-color: #0e76bc;
 }
 .badge-xs {
   font-size: 9px;
@@ -679,7 +679,7 @@ textarea.form-control {
   transform: translate(0, -2px);
 }
 .badge-primary {
-  background-color: #5d9cec;
+  background-color: #0e76bc;
 }
 .badge-success {
   background-color: #81c868;
@@ -742,8 +742,8 @@ textarea.form-control {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #7e57c2;
-  border-color: #7e57c2;
+  background-color: #0e76bc;
+  border-color: #0e76bc;
 }
 .pager li > a,
 .pager li > span {
@@ -781,10 +781,10 @@ textarea.form-control {
   width: 100%;
 }
 .tabs li.tab a.active {
-  color: #7e57c2 !important;
+  color: #0e76bc !important;
 }
 .tabs .indicator {
-  background-color: #7e57c2;
+  background-color: #0e76bc;
   bottom: 0;
   height: 2px;
   position: absolute;
@@ -797,13 +797,13 @@ textarea.form-control {
   line-height: 36px !important;
 }
 .nav-pills li.active a {
-  background-color: #7e57c2 !important;
+  background-color: #0e76bc !important;
 }
 .nav-pills li.active a:hover {
-  background-color: #7e57c2 !important;
+  background-color: #0e76bc !important;
 }
 .nav-pills li.active a:focus {
-  background-color: #7e57c2 !important;
+  background-color: #0e76bc !important;
 }
 .nav.nav-tabs + .tab-content {
   background: #ffffff;
@@ -856,7 +856,7 @@ textarea.form-control {
 }
 .nav.nav-tabs > li > a:hover,
 .nav.tabs-vertical > li > a:hover {
-  color: #7e57c2 !important;
+  color: #0e76bc !important;
 }
 .tab-content {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -884,7 +884,7 @@ textarea.form-control {
 .tabs-vertical > li.active > a,
 .tabs-vertical > li.active > a:focus,
 .tabs-vertical > li.active > a:hover {
-  color: #7e57c2 !important;
+  color: #0e76bc !important;
 }
 /* List group */
 .list-group-item {
@@ -985,7 +985,7 @@ textarea.form-control {
   padding: 15px 25px 15px 25px;
   line-height: 22px;
   font-size: 18px;
-  background-color: #36404a;
+  background-color: #0e76bc;
   color: #ffffff;
   text-align: left;
   margin: 0px;
@@ -1013,11 +1013,11 @@ textarea.form-control {
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
-  background-color: #7e57c2;
-  border-color: #7e57c2;
+  background-color: #0e76bc;
+  border-color: #0e76bc;
 }
 .nav-pills > .active > a > .badge {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 .has-success .form-control {
   border-color: #81c868;
@@ -1058,12 +1058,12 @@ textarea.form-control {
 }
 .popover .popover-title {
   background-color: transparent;
-  color: #7e57c2;
+  color: #0e76bc;
   font-weight: 600;
 }
 /* Code */
 code {
-  color: #5d9cec;
+  color: #0e76bc;
   background-color: #f4f8fb;
   border-radius: 4px;
 }
@@ -1142,7 +1142,7 @@ pre {
   display: none;
 }
 .navbar-default {
-  background-color: #7e57c2;
+  background-color: #0e76bc;
   border-radius: 0px;
   border: none;
   margin-bottom: 0px;
@@ -1226,8 +1226,8 @@ pre {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .noti-primary {
-  color: #5d9cec;
-  border: 2px solid #5d9cec;
+  color: #0e76bc;
+  border: 2px solid #0e76bc;
 }
 .noti-success {
   color: #81c868;
@@ -1258,8 +1258,8 @@ pre {
   border: 2px solid #fb6d9d;
 }
 .noti-custom {
-  color: #7e57c2;
-  border: 2px solid #7e57c2;
+  color: #0e76bc;
+  border: 2px solid #0e76bc;
 }
 .noti-inverse {
   color: #4c5667;
@@ -1344,7 +1344,7 @@ body.fixed-left .side-menu.left {
   border-top: 0;
 }
 #sidebar-menu ul ul li.active a {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 #sidebar-menu ul ul a {
   color: #75798B;
@@ -1352,7 +1352,7 @@ body.fixed-left .side-menu.left {
   padding: 10px 20px 10px 65px;
 }
 #sidebar-menu ul ul a:hover {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 #sidebar-menu ul ul a i {
   margin-right: 5px;
@@ -1365,8 +1365,8 @@ body.fixed-left .side-menu.left {
 }
 #sidebar-menu .subdrop {
   background: #f4f8fb !important;
-  border-left: 3px solid #7e57c2;
-  color: #7e57c2 !important;
+  border-left: 3px solid #0e76bc;
+  color: #0e76bc !important;
 }
 #sidebar-menu > ul > li > a {
   color: #36404a;
@@ -1376,7 +1376,7 @@ body.fixed-left .side-menu.left {
   border-left: 3px solid #ffffff;
 }
 #sidebar-menu > ul > li > a:hover {
-  color: #7e57c2;
+  color: #0e76bc;
   text-decoration: none;
 }
 #sidebar-menu > ul > li > a > span {
@@ -1429,8 +1429,8 @@ body.fixed-left .side-menu.left {
 }
 #sidebar-menu > ul > li > a.active {
   background: #f4f8fb !important;
-  border-left: 3px solid #7e57c2;
-  color: #7e57c2 !important;
+  border-left: 3px solid #0e76bc;
+  color: #0e76bc !important;
   font-weight: 500;
 }
 .menu-title {
@@ -1527,8 +1527,8 @@ body.fixed-left .side-menu.left {
   position: relative;
   width: 260px;
   background: #f4f8fb;
-  color: #7e57c2;
-  border-color: #7e57c2;
+  color: #0e76bc;
+  border-color: #0e76bc;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul > li:hover > ul {
   display: block;
@@ -1545,7 +1545,7 @@ body.fixed-left .side-menu.left {
   z-index: 6;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul > li:hover > ul a:hover {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul > li:hover a span {
   display: inline;
@@ -1565,10 +1565,10 @@ body.fixed-left .side-menu.left {
   z-index: 6;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu li .show-menu + ul a:hover {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu a.subdrop {
-  color: #7e57c2 !important;
+  color: #0e76bc !important;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul > li > ul {
   display: none;
@@ -1589,7 +1589,7 @@ body.fixed-left .side-menu.left {
   transform: rotate(270deg);
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul ul li.active a {
-  color: #7e57c2;
+  color: #0e76bc;
 }
 #wrapper.enlarged .left.side-menu #sidebar-menu ul > li > a span {
   display: none;
