--- a/src/assets/plugins/radial/radial.css
+++ b/src/assets/plugins/radial/radial.css
@@ -46,130 +46,130 @@
 }
 
 .radial-bar.radial-bar-0 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-5 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-10 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-15 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-20 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-25 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-30 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-35 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-40 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-45 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-50 {
-  background-image: linear-gradient(270deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(270deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-55 {
-  background-image: linear-gradient(288deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(288deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-60 {
-  background-image: linear-gradient(306deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(306deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-65 {
-  background-image: linear-gradient(324deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(324deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-70 {
-  background-image: linear-gradient(342deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(342deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-75 {
-  background-image: linear-gradient(360deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(360deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-80 {
-  background-image: linear-gradient(378deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(378deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-85 {
-  background-image: linear-gradient(396deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(396deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-90 {
-  background-image: linear-gradient(414deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(414deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-95 {
-  background-image: linear-gradient(432deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(432deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar.radial-bar-100 {
-  background-image: linear-gradient(450deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(450deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-0 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-5 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-10 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-15 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-20 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-25 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-30 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-35 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-40 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-45 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-50 {
-  background-image: linear-gradient(270deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(270deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-55 {
-  background-image: linear-gradient(288deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(288deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-60 {
-  background-image: linear-gradient(306deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(306deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-65 {
-  background-image: linear-gradient(324deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(324deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-70 {
-  background-image: linear-gradient(342deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(342deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-75 {
-  background-image: linear-gradient(360deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(360deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-80 {
-  background-image: linear-gradient(378deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(378deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-85 {
-  background-image: linear-gradient(396deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(396deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-90 {
-  background-image: linear-gradient(414deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(414deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-95 {
-  background-image: linear-gradient(432deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(432deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-primary.radial-bar-100 {
-  background-image: linear-gradient(450deg, #7e57c2 50%, transparent 50%, transparent), linear-gradient(270deg, #7e57c2 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(450deg, #0e76bc 50%, transparent 50%, transparent), linear-gradient(270deg, #0e76bc 50%, #fafafa 50%, #fafafa);
 }
 .radial-bar-success.radial-bar-0 {
   background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #81c868 50%, #fafafa 50%, #fafafa);
