--- a/src/app/pages/activity/components/mark/mark.component.html
+++ b/src/app/pages/activity/components/mark/mark.component.html
@@ -25,7 +25,7 @@
     <div class="col-lg-12">
       <ng2-toasty [position]="'top-right'"></ng2-toasty>
       <h2>Danh sách đăng ký</h2>
-      <div id="usersDataTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+      <div id="usersDataTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
         <div class="row" style="padding: 20px 0">
           <div class="col-sm-6">
             <div class="dataTables_length" id="usersDataTable_length">
@@ -39,7 +39,10 @@
                    mục</label></div>
           </div>
           <div class="col-sm-6">
-            <div id="usersDataTable_filter" class="dataTables_filter"><label>Tìm kiếm:<input type="search" class="form-control input-sm" placeholder="" aria-controls="usersDataTable"></label></div>
+            <div id="usersDataTable_filter" class="dataTables_filter">
+              <label>Tìm kiếm:
+                <input type="search" class="form-control input-sm" placeholder="" aria-controls="usersDataTable"></label>
+            </div>
           </div>
         </div>
         <div class="row">
