--- a/src/app/pages/activity/components/point/point.component.html
+++ b/src/app/pages/activity/components/point/point.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <table id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
+            <table id="usersDataTable" class="table table-striped table-bordered dataTable" role="grid" aria-describedby="usersDataTable_info">
               <thead>
                 <tr role="row">
                   <th class="sorting_asc" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="ID: activate to sort column descending"
@@ -28,7 +28,9 @@
                   <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
                     style="width: 203px;">Tên hoạt động</th>
                   <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Ngày diễn ra: activate to sort column ascending"
-                    style="width: 181px;">Ngày diễn ra</th>
+                    style="width: 181px;">Thời gian bắt đầu</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Ngày diễn ra: activate to sort column ascending"
+                    style="width: 181px;">Thời gian kết thúc</th>
                   <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Số lượng: activate to sort column ascending"
                     style="width: 140px;">Số lượng</th>
                   <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Chấm điểm: activate to sort column ascending"
@@ -40,6 +42,7 @@
                   <td class="sorting_1">{{i+1}}</td>
                   <td>{{activity.name}}</td>
                   <td>{{activity.startDate}}</td>
+                  <td>{{activity.endDate}}</td>
                   <td>{{activity.countRegistered}}</td>
                   <td><a [routerLink]="['mark',(activity.id)]" class="btn btn-default user">Chi tiết</a> </td>
                 </tr>
