--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -41,14 +41,7 @@
         </div>
         <div class="form-group text-center m-t-40">
           <div class="col-xs-12">
-            <button class="btn btn-info btn-block text-uppercase waves-effect waves-light" type="submit">Đăng nhập</button>
-          </div>
-        </div>
-
-        <div class="form-group m-t-30 m-b-0">
-          <div class="col-sm-12">
-            <a [routerLink]="['/recover-password']" class="text-dark">
-            <i class="fa fa-lock m-r-5"></i> Quên mật khẩu?</a>
+            <button class="btn btn-info btn-block text-uppercase waves-effect waves-light" style="background-color: #0e76bc" type="submit">Đăng nhập</button>
           </div>
         </div>
       </form>
