--- a/src/app/pages/member/activity-management/activity-management.component.html
+++ b/src/app/pages/member/activity-management/activity-management.component.html
@@ -31,10 +31,13 @@
     <div *ngIf="isEmpty()" style="text-align: center">
       <h3>Bạn chưa đăng ký tham gia hoạt động nào!</h3>
     </div>
-
-    <div class="card-box m-b-10" *ngFor="let register of registers">
+  </div>
+</div>
+<div class="row" *ngFor="let register of registers">
+  <div class="col-lg-12 col-md-12">
+    <div class="card-box m-b-10">
       <div class="table-box opport-box">
-        <div class="table-detail">
+        <div class="table-detail" style="width: 200px">
           <img src="{{getLinkImg(register.activity.imgUrl)}}" alt="img" class="img-circle thumb-lg m-r-15" />
         </div>
         <div class="table-detail">
@@ -43,7 +46,6 @@
             <p class="text-dark m-b-5"><b>Ngày tạo: </b> <span class="text-muted">{{register.activity.createdDate}}</span></p>
           </div>
         </div>
-
         <div class="table-detail lable-detail">
           <p class="text-dark m-b-5"><b>Ngày bắt đầu: </b> <span class="text-muted">{{register.activity.startDate}}</span></p>
           <p class="text-dark m-b-5"><b>Ngày kết thúc: </b> <span class="text-muted">{{register.activity.endDate}}</span></p>
