--- a/src/app/pages/member/point-management/point-management.component.html
+++ b/src/app/pages/member/point-management/point-management.component.html
@@ -1,82 +1,61 @@
 <div class="card-box table-responsive">
   <div class="row">
     <div class="col-md-8">
-      <div class="row">
-        <div class="col-md-4">
-          <h3> Điểm CTXH </h3>
-
+      <div class="row" style="padding-top:10px ">
+        <div class="col-md-4 col-sm-4">
+          <h3 style="display: inline"> Điểm CTXH </h3>
           <span class="label label-pink">{{point.tranning}}</span>
         </div>
-        <div class="col-md-4">
-          <h3 class="m-l-40"> Điểm rèn luyện</h3>
-
+        <div class="col-md-4 col-sm-4">
+          <h3 style="display: inline" class="m-l-40"> Điểm rèn luyện</h3>
           <span class="label label-pink">{{point.social}}</span>
         </div>
       </div>
     </div>
   </div>
   <br>
-  <div class="col-lg-12">
-    <div id="usersDataTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="dataTables_length" id="usersDataTable_length"><label>Xem <select name="usersDataTable_length" aria-controls="usersDataTable" class="form-control input-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> mục</label></div>
-        </div>
-        <div class="col-sm-6">
-          <div id="usersDataTable_filter" class="dataTables_filter"><label>Tìm kiếm:<input type="search" class="form-control input-sm" placeholder="" aria-controls="usersDataTable"></label></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <table id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
-            <thead>
-              <tr role="row">
-                <th class="sorting_asc" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="ID: activate to sort column descending"
-                  aria-sort="ascending" style="width: 53px;">ID</th>
-                <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
-                  style="width: 186px;">Tên hoạt động</th>
-                <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
-                  style="width: 186px;">Tên tổ chức</th>
-                <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Ngày diễn ra: activate to sort column ascending"
-                  style="width: 166px;">Ngày diễn ra</th>
-                <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Điểm CTXH: activate to sort column ascending"
-                  style="width: 156px;">Điểm CTXH</th>
-                <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Điểm rèn luyện: activate to sort column ascending"
-                  style="width: 194px;">Điểm rèn luyện</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr role="row" class="{i%2?odd:event}" *ngFor="let register of registers; let i = index">
-                <td class="sorting_1">{{i+1}}</td>
-                <td>{{register.activity.name}}</td>
-                <td>{{register.activity.organization.name}}</td>
-                <td>{{register.activity.startDate}}</td>
-                <td>{{register.pointSocial}}</td>
-                <td>{{register.pointTranning}}</td>
-              </tr>
-              <tr *ngIf="isEmpty()">
-                <td colspan="6" style="text-align: center">
-                  <b style="font-size: 16pt">Bạn chưa tham gia hoạt động nào</b>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="dataTables_info" id="usersDataTable_info" role="status" aria-live="polite">Đang xem 1 đến 6 trong tổng số 6 mục</div>
-        </div>
-        <div class="col-sm-6">
-          <div class="dataTables_paginate paging_simple_numbers" id="usersDataTable_paginate">
-            <ul class="pagination">
-              <li class="paginate_button previous disabled" aria-controls="usersDataTable" tabindex="0" id="usersDataTable_previous"><a href="#">Trước</a></li>
-              <li class="paginate_button active" aria-controls="usersDataTable" tabindex="0"><a href="#">1</a></li>
-              <li class="paginate_button next disabled" aria-controls="usersDataTable" tabindex="0" id="usersDataTable_next"><a href="#">Tiếp</a></li>
-            </ul>
+  <div class="row">
+    <div class="col-lg-12">
+      <div id="usersDataTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
+        <div class="row" style="padding-bottom: 3em">
+          <div class="col-sm-12">
+            <table id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
+              <thead>
+                <tr role="row">
+                  <th class="sorting_asc" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="ID: activate to sort column descending"
+                    aria-sort="ascending" style="width: 53px;">STT</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
+                    style="width: 186px;">Tên hoạt động</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
+                    style="width: 186px;">Tên tổ chức</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Ngày diễn ra: activate to sort column ascending"
+                    style="width: 166px;">Ngày diễn ra</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Điểm CTXH: activate to sort column ascending"
+                    style="width: 156px;">Điểm CTXH</th>
+                  <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Điểm rèn luyện: activate to sort column ascending"
+                    style="width: 194px;">Điểm rèn luyện</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr role="row" class="{i%2?odd:event}" *ngFor="let register of registers; let i = index">
+                  <td class="sorting_1">{{i+1}}</td>
+                  <td>{{register.activity.name}}</td>
+                  <td>{{register.activity.organization.name}}</td>
+                  <td>{{register.activity.startDate}}</td>
+                  <td>{{register.pointSocial}}</td>
+                  <td>{{register.pointTranning}}</td>
+                </tr>
+                <tr *ngIf="isEmpty()">
+                  <td colspan="6" style="text-align: center">
+                    <b style="font-size: 16pt">Bạn chưa tham gia hoạt động nào</b>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </div>
   </div>
+
 </div>
