--- a/src/app/pages/organizations/organizations.component.html
+++ b/src/app/pages/organizations/organizations.component.html
@@ -1,29 +1,31 @@
 <ng2-toasty [position]="'top-right'"></ng2-toasty>
 <div class="card-box table-responsive">
-  <div class="row">
+  <div class="row" style="padding-top:10px">
     <div class="col-md-6 col-sm-6">
       <button type="button" class="btn btn-default btn-md waves-effect waves-light m-b-30" (click)="showModal()">
         <i class="md md-add"></i> Thêm mới
     </button>
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="padding-bottom:20px">
     <div class="col-lg-12">
-      <table datatable id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
+      <table datatable id="usersDataTable" class="table table-striped table-bordered dataTable" role="grid" aria-describedby="usersDataTable_info">
         <thead>
           <tr role="row">
+            <th>STT</th>
             <th>Tên</th>
             <th>Mô tả</th>
             <th>Hành động</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let org of orgs">
+          <tr *ngFor="let org of orgs ; let i = index">
+            <td>{{i+1}}</td>
             <td>{{org.name}}</td>
             <td>{{org.description}}</td>
             <td>
               <button (click)="showModalEdit(org.id,org.name,org.description)" class="btn btn-default user">Sửa</button>
-              <button data-toggle="custom-modal" data-target="#custom-modal" class="btn btn-danger del">Xóa</button>
+              <!--<button data-toggle="custom-modal" data-target="#custom-modal" class="btn btn-danger del">Xóa</button>-->
             </td>
           </tr>
         </tbody>
@@ -31,7 +33,6 @@
     </div>
   </div>
 </div>
-
 <div class="modal fade" bsModal #orgModal="bs-modal" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -60,10 +61,15 @@
               </div>
             </div>
           </div>
-          <button type="button" (click)="save()" class="btn btn-default waves-effect waves-light">Lưu</button>
-          <button type="button" class="btn btn-danger waves-effect waves-light m-l-10" (click)="hideModal()">Hủy</button>
+          <div class="row">
+            <div class="col-lg-12 col-md-12">
+              <div class="pull-right">
+                <button type="button" (click)="save()" class="btn btn-default waves-effect waves-light">Lưu</button>
+                <button type="button" class="btn btn-danger waves-effect waves-light m-l-10" (click)="hideModal()">Hủy</button>
+              </div>
+            </div>
+          </div>
         </form>
-
       </div>
     </div>
   </div>
