--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-navbar></app-navbar>
+<app-navbar [(currentPermission)]="currentPermission"></app-navbar>
 <div class="content-page">
   <div class="content">
     <div class="container">
