--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,15 +1,4 @@
-<div class="col-md-4 col-lg-3">
-  <div class="profile-detail card-box">
-    <div>
-      <img src="../../assets/images/users/avatar-2.jpg" class="img-circle" alt="profile-image">
-
-      <ul class="list-inline status-list m-t-20">
-
-      </ul>
-    </div>
-  </div>
-</div>
-<div class="col-lg-9 col-md-8">
+<div class=" col-md-8">
   <div class="card-box">
     <form role="form">
       <div class="form-group">
