--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,40 +1,40 @@
 <ng2-toasty [position]="'top-right'"></ng2-toasty>
 <div class="card-box table-responsive">
-  <div class="row">
+  <div class="row" style="padding-top: 20px">
     <div class="col-md-6 col-sm-6 col-xs-12">
       <a [routerLink]="['/pages/admin/users/new']" class="btn btn-default btn-md waves-effect waves-light m-b-30">
         <i class="md md-add"></i> Thêm mới
     </a>
     </div>
-    <div class="col-md-6 col-sm-6 col-xs-12">
+    <!--<div class="col-md-6 col-sm-6 col-xs-12">
       <a href="#import-modal" class="btn btn-success waves-effect waves-light m-b-30 pull-right" data-animation="fadein" data-plugin="custommodal"
         data-overlayspeed="200" data-overlaycolor="#36404a">
                                        Nhập từ file</a>
-    </div>
+    </div>-->
   </div>
-  <div class="row">
+  <div class="row" style="padding-bottom: 20px">
     <div class="col-lg-12">
-      <table datatable id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
+      <table datatable id="usersDataTable" class="table table-striped table-bordered dataTable" role="grid" aria-describedby="usersDataTable_info">
         <thead>
           <tr role="row">
-            <th> Tên tài khoản </th>
+            <th>STT</th>
+            <th>Tên tài khoản </th>
             <th>Họ và tên</th>
             <th>Giới tính</th>
             <th>Email</th>
-            <th>Khoa</th>
             <th>Hành động</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of users">
+          <tr *ngFor="let user of users; let i = index">
+            <td>{{i+1}}</td>
             <td>{{user.username}}</td>
             <td>{{user.name}}</td>
             <td>{{user.sex?"Nam":"Nữ"}}</td>
             <td>{{user.email}}</td>
-            <td>{{user.id}}</td>
             <td>
               <a [routerLink]="['/pages/cbd/users/edit/',(user.username)]" class="btn btn-default user">Sửa</a>
-              <button data-toggle="custom-modal" data-target="#custom-modal" class="btn btn-danger del">Xóa</button>
+              <!--<button data-toggle="custom-modal" data-target="#custom-modal" class="btn btn-danger del">Xóa</button>-->
             </td>
           </tr>
         </tbody>
